--- a/src/css/base.css
+++ b/src/css/base.css
@@ -30,3 +30,64 @@ main {
 main:has(.back-link) {
   text-align: center;
 }
+
+.cont {
+  width: 1128px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.form {
+  padding-top: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 24px;
+}
+
+.input-text {
+  width: 272px;
+  height: 40px;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  border: 1px solid #808080;
+  color: #808080;
+  border-radius: 4px;
+  outline: none;
+}
+
+.input-text:hover {
+  border-color: black;
+}
+
+.input-text:focus {
+  border-color: #4e75ff;
+}
+
+.btn {
+  width: 75px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  color: white;
+  outline: none;
+  border: none;
+  padding: 8px 16px;
+}
+
+.btn:hover {
+  background-color: #6c8cff;
+}
+
+.waiting-text {
+  font-size: 16px;
+  letter-spacing: 0.04em;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
