--- a/src/css/base.css
+++ b/src/css/base.css
@@ -36,6 +36,7 @@ main:has(.back-link) {
   display: flex;
   flex-direction: column;
   gap: 32px;
+  align-items: center;
 }
 
 .form {
@@ -81,13 +82,61 @@ main:has(.back-link) {
   background-color: #6c8cff;
 }
 
-.waiting-text {
-  font-size: 16px;
-  letter-spacing: 0.04em;
+.loader {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+  margin: 0 auto;
+  display: none; /* приховано за замовчуванням */
+}
+
+.loader.is-visible {
+  display: block;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .gallery {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
+}
+
+.gallery-link {
+  position: relative;
+  border: 1px solid black;
+}
+
+.img-info-list {
+  width: 100%;
+  height: 48px;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  background-color: #fff;
+  padding: 4px auto;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info-title,
+.info-text {
+  font-size: 12px;
 }
